@@ -26,3 +26,11 @@ class Journal(models.Model):
     title = models.CharField(max_length=50)
     description = models.TextField()
     version = models.PositiveIntegerField(default=0)
+
+
+class UncoveredModel(models.Model):
+    book = models.ForeignKey(Book, on_delete=models.CASCADE)
+    website = models.URLField(blank=True)
+
+    def get_absolute_url(self):
+        return f'/uncovered/{self.id}'
